--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "ky-universal": "^0.11.0",
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
