centrifugo connected, load_data error message added

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_API_URL='http://89.111.137.133'
+NEXT_PUBLIC_SERVER_ADDRESS='89.111.137.133'
+NEXT_PUBLIC_API_URL='http://${NEXT_PUBLIC_SERVER_ADDRESS}'
+NEXT_PUBLIC_WS_URL='ws://${NEXT_PUBLIC_SERVER_ADDRESS}'
