--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "centrifuge": "^2.8.5",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
