--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-next": "13.4.9",
     "jotai": "^2.2.2",
     "ky-universal": "^0.11.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
-    "@tanstack/react-query-devtools": "^4.29.19"
+    "@tanstack/react-query-devtools": "^4.29.19",
+    "@types/lodash": "^4.14.197"
   }
 }
