--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-NEXT_PUBLIC_SERVER_ADDRESS='89.111.137.133'
-NEXT_PUBLIC_API_URL='http://${NEXT_PUBLIC_SERVER_ADDRESS}'
-NEXT_PUBLIC_WS_URL='ws://${NEXT_PUBLIC_SERVER_ADDRESS}'
+NEXT_PUBLIC_SERVER_ADDRESS='sndcastye.ru'
+NEXT_PUBLIC_API_URL='https://${NEXT_PUBLIC_SERVER_ADDRESS}'
